--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "keys.js",
   "dependencies": {
     "node-spotify-api": "^1.0.7",
+    "request": "^2.83.0",
+    "require": "^2.4.20",
     "twitter": "^1.7.1"
   },
   "devDependencies": {},
